Added a security manager as to avoid any malicious code from being compiled on our platform